# pq-messenger

./: .gitignore  CHANGELOG.md  LICENSE  README.md  _config.yml  _toc.yml  intro.md  pyproject.toml
.github/workflows/: book.yml  redirect.yml
_extra/: robots.txt
_static/: custom.css  lang-switcher.js
_templates/: layout.html
docs/superpowers/plans/: 2026-04-22-pq-messenger.md
docs/superpowers/specs/: 2026-04-22-pq-messenger-design.md
ko/: _config.yml  _toc.yml  _translate.py  intro.md
ko/notebooks/: 01_protocol_overview.ipynb  02_key_agreement.ipynb  03_ratcheting.ipynb  04_full_session.ipynb  05_what_we_omitted.ipynb  06_comparison.ipynb  07_reference.md
notebooks/: 01_protocol_overview.ipynb  02_key_agreement.ipynb  03_ratcheting.ipynb  04_full_session.ipynb  05_what_we_omitted.ipynb  06_comparison.ipynb  07_reference.md
pqmsg/: __init__.py  cli.py  encoding.py  identity.py  kdf.py  session.py  transport.py
tests/: test_cli.py  test_dh_ratchet.py  test_encoding.py  test_identity.py  test_kdf.py  test_session.py  test_transport.py
